fix: indiv. submission page content now wraps

--- a/css/submission.css
+++ b/css/submission.css
@@ -4,7 +4,7 @@
   justify-content: space-evenly;
   align-items: flex-start;
   min-height: 100vh;
-
+  flex-wrap: wrap;
 }
 
 #content-container {
